RESOLVED FIXED133094
fix assertion failure in PerformanceTiming::responseStart
https://bugs.webkit.org/show_bug.cgi?id=133094
Summary fix assertion failure in PerformanceTiming::responseStart
Alex Christensen
Reported 2014-05-19 16:48:38 PDT
Sometimes responseStart is still -1 when the timing data from CFNetwork is 0. This should fix the assertion failure.
Attachments
Patch (1.86 KB, patch)
2014-05-19 16:52 PDT, Alex Christensen
no flags
Patch (1.86 KB, patch)
2014-05-19 17:07 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2014-05-19 16:52:39 PDT
Alex Christensen
Comment 2 2014-05-19 17:07:13 PDT
Alexey Proskuryakov
Comment 3 2014-05-20 09:52:53 PDT
Comment on attachment 231739 [details] Patch Is this covered by any regression tests?
WebKit Commit Bot
Comment 4 2014-05-20 10:30:05 PDT
Comment on attachment 231739 [details] Patch Clearing flags on attachment: 231739 Committed r169119: <http://trac.webkit.org/changeset/169119>
WebKit Commit Bot
Comment 5 2014-05-20 10:30:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.