Fix web timing assertion failure. https://bugs.webkit.org/show_bug.cgi?id=133094 <rdar://problem/16966032>

Patch by Alex Christensen <achristensen@webkit.org> on 2014-05-20
Reviewed by Alexey Proskuryakov.

* platform/network/mac/ResourceHandleMac.mm:
(WebCore::ResourceHandle::getConnectionTimingData):
Set requestStart and responseStart to 0 instead of -1 to match the
ResourceLoadTiming constructor and prevent the assertion failure in
PerformanceTiming::responseStart.

Canonical link: https://commits.webkit.org/151146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169119 268f45cc-cd09-0410-ab3c-d52691b4dbfc